...
    keyboardController: SoftwareKeyboardController?
) {
    Column {
        Row(verticalAlignment = Alignment.CenterVertically) {
            Text(text = "선택된 날짜 : $date")
            IconButton(onClick = { onDatePickerShowClick() }) {
                Icon(imageVector = Icons.Default.DateRange, contentDescription = "selectDate")
            }
        }
        CharacterNameSearchBar(
            searchQuery = searchQuery,
            searchDate = date,
            onSearchCharacterClick = onSearchCharacterClick,
...
