...
            onDismiss = { onDatePickerValueChange(false) })
    }
    val keyboardController = LocalSoftwareKeyboardController.current
    Scaffold(
        topBar = {
            MapleTopBar(
                title = "캐릭터 정보 검색",
                onNavigationIconClick = onNavigationIconClick
            )
        }
    ) { paddingValues ->
        Column(
            modifier = Modifier
...
